--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,114 +1,50 @@
 
 :root{
-    --primary-color:#E8E8E8;
-    --branding-color:#de1a1a;
-    --secondary-color:#2E2E2E;
-    --light-color:#f6f2f2 ;
-    --shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
-}
-body{
-    background-color:var(--light-color) ;}
-.container{
-background-color: var(--primary-color) ;
-max-width:  800px; 
-padding: 20px;
-margin-top: 20px;
-margin-bottom: 10px;
-padding-bottom: 80px;
-display: block;
-text-align: start;
-border-top-left-radius: 8px;
-box-shadow:var(--shadow);
+    --branding-color: #6C63FF;
+    --secondary-color: #F9F7FE;
+    --heading-font-family:"Playfair Display", serif;
+--default-font-family:"Poppins, sans-serif";}
+
+
+body {
+    font-family: var(--default-font-family);
 }
 
+h1,h2,h3,h4,h5,h6
+{
+    color:black;
+font-family: var(--heading-font-family);
+font-weight: bold;}
 h1{
-    font-size: 52px;
-    letter-spacing: .2rem;
-    opacity:0.7;
-    line-height: 1.5;}
-
-    h2{
-         margin-top: 40px;
-        margin-right: 20px;
-        margin-left: 40px;
-        font-size: 24px;
-        letter-spacing: .2rem;
-        opacity:0.5;
-        line-height: 1.5;
-        text-align: strat;
-        padding: 30px;
-
-    }
-    h2:hover{
-        text-decoration: underline var(--branding-color);
-    }
-
+    font-size: 96px;
+}
 
 p{
-    opacity: 0.6;
+    font-family: var(--default-font-family);
+    font-weight: normal;
+}
+
+.hero{
+background-color: var(--secondary-color) ;
+text-align: center;
+padding: 160px 20px;}
+
+.hero p{
+    font-size: 36px;
+font-weight: bold;}
+
+.hero h2{
+    font-family: var(--branding-color);
+    font-weight: normal;
     font-size: 24px;
-    padding-left: 10px;
-    border-left:2px solid var(--branding-color);
+    line-height: 2;
+    color: #272142;
 }
-
-.description{
-    text-align: left;
-    line-height: 1;
-  
-}
-.circle{color: var(--branding-color);}
-
-
-h1,p{
-    
- color:var(--secondary-color);
- margin-left: 70px;
- margin-right: 120px;
- 
-}
-
-.monsterrat-uniq{
-    font-family: Montserrat-Regular;
-    font-optical-sizing: auto;
-    font-weight: 100;
-    font-style: normal;
-
-}
-img{
-
-text-align:center;
-display : block;
-margin-top: 0;
-margin-left: 30px;
-border-bottom: 1px solid var(--branding-color);
-max-width: 200px;}
-
-.fa-brands, .fa-solid{
-  
-color:var(--secondary-color) ;
-
-opacity:0.7;
-font-size: 30px;
-border-radius: 8px;}
-
-.fa-solid:hover, .fa-brands:hover { 
-
-color: var(--branding-color);
-}
-
-@media (max-width: 900px){
-    .container{max-width: 400px;}
-    img{
-        width: 50px;
-    }
-    h1{
-        margin-top: 10px;
-        font-size: 24px;
-    
-    }
-    h2{font-size:18px;}
-    p{font-size: 16px;
- }
- .contact-me{font-size: 10px;}
- .fa-brands, .fa-solid{font-size: 20px;}
+.btn-branding{
+    background-color: var(--branding-color);
+    border-radius: 4px;
+    font-size: 18px;
+    line-height: 27px;
+    padding: 15px 30px;
+    color: white;
 }
