--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -18,10 +18,13 @@ font-weight: bold;}
 h1{
     font-size: 96px;
 }
+h2{font-size: 64px;}
 
 p{
     font-family: var(--default-font-family);
     font-weight: normal;
+    font-size: 16px;
+    line-height: 30px;
 }
 
 .hero{
@@ -41,10 +44,32 @@ font-weight: bold;}
     color: #272142;
 }
 .btn-branding{
+    line-height: 27px;
+    padding: 15px 30px;
     background-color: var(--branding-color);
+        border-radius: 4px;
+        font-size: 18px;
+        line-height: 27px;
+        padding: 15px 30px;
+        color: white;
+    }
+
+  
+.btn-branding-outline{ 
+ padding: 15px 30px;
+background-color: white;
+border: 1px solid var(--branding-color);
     border-radius: 4px;
     font-size: 18px;
     line-height: 27px;
     padding: 15px 30px;
-    color: white;
+    color:var(--branding-color);
 }
+.project-description{
+    padding: 120px 60px;
+}
+@media(max-width:900px){
+    .project-description
+   {padding:0;
+    text-align: center;
+}} 
