--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -69,15 +69,15 @@ border: 1px solid var(--branding-color);
 .project-description{
     padding: 120px 60px;
 }
-.about-section h1{
+.content-container h1{
     font-size: 64px;
     line-height:80px ;
 }
-.about-section h2{
+.content-container h2{
     font-size: 18px;
     font-family: var(--default-font-family);
 }
-.about-section-content{
+.content{
     text-align: center;
 margin: 30px;
 }
