--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -66,20 +66,36 @@ border: 1px solid var(--branding-color);
     padding: 15px 30px;
     color:var(--branding-color);
 }
+
 .project-description{
     padding: 120px 60px;
 }
-.content-container h1{
+
+.content-container{
+    padding: 160px 20px;
+}
+.content h1{
     font-size: 64px;
     line-height:80px ;
 }
-.content-container h2{
+.content h2{
     font-size: 18px;
     font-family: var(--default-font-family);
+}
+.content h3{
+    font-size: 24px;
+    line-height: 1.5;
+    margin: 20px 0 0;
+    font-family: var(--default-font-family);
+}
+.content p{
+    margin: 0;
+    font-size: 14px;
 }
 .content{
     text-align: center;
 margin: 30px;
+padding: 0;
 }
 
 @media(max-width:900px){
