--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -97,6 +97,35 @@ border: 1px solid var(--branding-color);
 margin: 30px;
 padding: 0;
 }
+.logo{
+    max-width:150px;
+   
+}
+nav{
+    padding:20px 0;
+}
+nav ul{
+    padding: 0;
+    margin: 0;
+  
+}
+nav li {
+    display:inline-block; 
+     line-height: 42px;
+      list-style: none;
+      margin-left:15px;
+    }
+
+nav a{
+        text-decoration: none;
+        color: #272142;
+        transition: all 100ms ease-in-out;
+        font-family: var(--heading-font-family);
+     
+      }
+nav a:hover, nav li.active a{
+    color: var(--branding-color);
+}
 
 @media(max-width:900px){
     h1{
@@ -107,10 +136,15 @@ padding: 0;
         font-size: 44px;
     }
     .project-description
-   {padding:0;
+   {  padding: 20px;
     text-align: center;
 }
 .hero{
     padding: 80px 20px;
 }
+.logo{
+    max-width:80px ;
+    line-height: 20px;
+}
+
   } 
