--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -99,14 +99,15 @@ padding: 0;
 }
 .logo{
     max-width:150px;
-   
+    padding: 0;
 }
 nav{
-    padding:20px 0;
+    padding: 0;
 }
 nav ul{
     padding: 0;
     margin: 0;
+   
   
 }
 nav li {
