--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -21,6 +21,10 @@ h1{
 }
 h2{font-size: 64px;}
 
+h4{
+    font-size: 48px;
+}
+
 p{
     font-family: var(--default-font-family);
     font-weight: normal;
@@ -128,6 +132,41 @@ nav a{
 nav a:hover, nav li.active a{
     color: var(--branding-color);
 }
+footer{
+    margin: 60px 0;
+}
+footer .contact-box{
+    background: var(--secondary-color);
+    padding: 30px 120px;
+    border-radius: 10px;
+}
+footer .contact-box p{
+   margin: 0;
+
+
+}
+footer .email-link{
+text-decoration: none;
+color: black;
+font-size: 24px;
+}
+footer .email-link:hover{
+    color: var(--branding-color);
+}
+
+footer .social-links a { 
+margin: 0 20px;
+color: var(--branding-color); 
+background: var(--secondary-color);
+padding: 10px 14px;
+border-radius: 50%;
+font-size: 18px;
+transition: all 100ms ease-in-out;
+}
+footer .social-links a:hover{
+    color: white;
+    background-color: var(--branding-color);
+}
 
 @media(max-width:900px){
     h1{
@@ -136,6 +175,9 @@ nav a:hover, nav li.active a{
     }
     h2{
         font-size: 44px;
+    }
+    h4{
+        font-size: 26px;
     }
     .project-description
    {  padding: 20px;
@@ -147,6 +189,10 @@ nav a:hover, nav li.active a{
 .logo{
     max-width:80px ;
     line-height: 20px;
+}
+.content{
+    text-align: center;
+    padding: 0;
 }
 
   } 
