--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -65,7 +65,7 @@ font-weight: bold;}
            font-size: 18px;
            line-height: 27px;
            padding: 15px 30px;
-           color:white;
+           color:var(--branding-color);
        }
        
   
